--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>계산기 만들기</title>
   </head>
   <body>
     <div id="root"></div>
